Fixing more resolution issues
# Fixed
- Fixed: Fixed issue where image was now too small on 1080p resolutions.

--- a/UI/Web/src/app/series-detail/series-detail.component.scss
+++ b/UI/Web/src/app/series-detail/series-detail.component.scss
@@ -34,7 +34,7 @@
 }
 
 .image-container {
-  max-height: 400px;
+  max-width: 280px;
 }
 
 .info-container {
